--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "@material-tailwind/react": "^2.1.9",
     "moment": "^2.30.1",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.4.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.2",
     "react-icons": "^5.0.1",
     "react-select": "^5.8.0",
+    "react-toastify": "^10.0.5",
     "yup": "^1.4.0"
   },
   "devDependencies": {
